<resources>
    <string name="app_name">Fandom</string>
    <string name="facebook_app_id">1754090861550970</string>
    <string name="ready_to_record">Ready to Record</string>
    <string name="playing_audio">Playing Audio</string>
    <string name="recording">Recording</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address_to_reset">Email Address to reset</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="type_your_message">Type your message</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="send_to_fans">Send to fans</string>
    <string name="artist_name">Artist Name</string>
    <string name="create_account">Create Account</string>
    <string name="profile">Profile</string>
    <string name="by">by</string>
    <string name="go_live">Go Live</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="audio_messages">Audio Messages</string>
    <string name="logout">Logout</string>
    <string name="broadcast">Broadcast</string>
    <string name="voice_record">Voice Record</string>
    <string name="artist_posts">Artist Posts</string>
    <string name="video_stream">Video Stream</string>
    <string name="search">Search</string>
    <string name="connections">Connections</string>
    <string name="profile_image_content_description">Profile image</string>
    <string name="update_account">Update Account</string>
    <string name="profile_title">Profile</string>
    <string name="login_progress">Log in...</string>
    <string name="hello_user">Hello User</string>
    <string name="update_profile">Update Profile</string>
    <string name="image_saved">Image Saved!</string>
    <string name="profile_updated">Profile updated</string>
    <string name="error_no_user_to_update">Error: There\'s no user to update.</string>
    <string name="no_user_connected">No user is connected</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="post_options">Post options</string>
    <string name="share">Share</string>
    <string name="log_in">Log In</string>
    <string name="toggle_audio">Toggle Audio</string>
    <string name="audio">Audio</string>
    <string name="mute">Mute</string>
    <string name="swap_camera">Swap Camera</string>
    <string name="toggle_video">Toggle Video</string>
    <string name="show">Show</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_starting_live_broadcast">Error starting a live broadcast</string>
</resources>
