<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_broadcast"
        android:icon="@drawable/ic_action_broadcast"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/broadcast"/>

    <item
        android:id="@+id/action_voice"
        android:icon="@drawable/ic_action_microphone"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/voice_record"/>

    <item
        android:id="@+id/action_posts"
        android:orderInCategory="100"
        android:title="@string/artist_posts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_voice_notify"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/audio_messages"/>

    <item
        android:id="@+id/action_video_streams"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/video_stream"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/update_profile"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>



</menu>