<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    tools:context="com.example.deoncole.fandom.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/fandom_logo_color"/>

    <Button
        android:id="@+id/signUpBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/logInBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/log_in"/>

    <TextView
        android:id="@+id/forgotPassTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

</LinearLayout>
