<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deoncole.fandom.LiveStreamActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:keepScreenOn="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

                <RelativeLayout
                    android:id="@+id/subscriberView0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ToggleButton
                        android:text="@string/toggle_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleAudioSubscriber0"
                        android:textOff="@string/audio"
                        android:textOn="@string/mute"
                        android:checked="true"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/subscriberView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ToggleButton
                        android:text="@string/toggle_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleAudioSubscriber1"
                        android:textOff="@string/audio"
                        android:textOn="@string/audio"
                        android:checked="true"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:id="@+id/subscriberview2">

                    <ToggleButton
                        android:text="@string/toggle_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleAudioSubscriber2"
                        android:textOff="@string/audio"
                        android:textOn="@string/audio"
                        android:checked="true"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/subscriberView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ToggleButton
                        android:text="@string/toggle_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleAudioSubscriber3"
                        android:textOff="@string/audio"
                        android:textOn="@string/audio"
                        android:checked="true"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/publisherView"
            android:layout_height="200dp"
            android:layout_width="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/swap_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/swapCamera"
                    android:layout_weight="1" />

                <ToggleButton
                    android:text="@string/toggle_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleAudio"
                    android:layout_weight="1"
                    android:textOff="@string/audio"
                    android:textOn="@string/audio"
                    android:checked="true" />

                <ToggleButton
                    android:text="@string/toggle_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleVideo"
                    android:layout_weight="1"
                    android:textOff="@string/show"
                    android:textOn="@string/show"
                    android:checked="true" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
